# p2p_msg

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_HARNESS_IMPORTANT.md  CheckList.md  DESIGN.md  EXTENSION_GUIDE.md  FRONTEND.md  History.md  MIGRATION_MARIADB.md  PLANS.md  PORTABLE_HARNESS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  Specification.md  Structure.md  pyproject.toml
.claude/: settings.json  settings.json.disabled
.claude/agents/: dereliction-detector-agent.md  doc-gardener-agent.md  history-agent.md  observability-agent.md  planning-agent.md  qa-agent.md  release-agent.md  reviewer-agent.md  ssh-deploy-agent.md
.codex/: hooks.json
.codex/agents/: dereliction-detector-agent.toml  doc-gardener-agent.toml  history-agent.toml  observability-agent.toml  planning-agent.toml  qa-agent.toml  release-agent.toml  reviewer-agent.toml  ssh-deploy-agent.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  doc-gardener.yml  docs-lint.yml  release.yml
app/: README.md  __init__.py  main.py  requirements-dev.txt  requirements.txt
app/backup/: __init__.py  encrypted_backup.py  rotate_key.py
app/bot/: __init__.py  anthropic_client.py  customer_service_bot.py  emoji_dmca_check.py  emoji_moderation_dispatcher.py  escalation_queue.py  jailbreak_detector.py  jailbreak_detector_ocr.py  llm_proxy.py  obs_websocket_client.py  openai_client.py  rag_context.py  rag_corpus.py  streaming.py  streaming_helper.py  toonation_client.py  usage_tracker.py
app/config/: __init__.py  user_preferences.py
app/core/: __init__.py  app_state.py  config.py  security.py
app/crypto/: __init__.py  device_registry.py  double_ratchet.py  e2ee.py  fan_out.py  sender_keys.py  session.py  skipped_keys.py  x3dh.py
app/db/: __init__.py  local_db.py  messages_cache.py
app/i18n/: __init__.py  labels.py  labels_extract.json
app/net/: __init__.py  _ssl_util.py  account_client.py  auth_client.py  avatars_client.py  call_client.py  folder_client.py  friends_client.py  group_message_client.py  message_protocol.py  messages_client.py  push_client.py  reactions_client.py  rooms_client.py  sfu_call_client.py  signaling_client.py
app/notifications/: __init__.py  fcm_client.py  push.py
app/remote/: __init__.py  capture.py  coord_transform.py  input_dispatch.py  input_forward.py  permission.py  protocol.py  remote_handshake.py  screen_capture.py  session_runner.py
app/rtc/: README.md  __init__.py  file_receiver.py  file_sender.py  image_processor.py  mesh_manager.py  peer.py  peer_connection.py  protocol.py
app/sound/: __init__.py  ringtone.py
app/ui/: __init__.py  _auth_chain_mixin.py  _avatar_cache.py  _avatar_helper.py  _avatar_picker_button.py  _bot_chat_mixin.py  _camera_capture_dialog.py  _chat_header_mixin.py  _chat_helper_mixin.py  _chat_navigation_mixin.py  _chat_send_mixin.py  _close_button.py  _dialog_center_mixin.py  _drawer_mixin.py  _folder_mixin.py  _friend_profile_mixin.py  _friend_search_mixin.py  _friend_status_mixin.py  _http_worker.py  _icons.py  _invite_mixin.py  _lifecycle_events_mixin.py  _menu_actions_mixin.py  _menu_bar_mixin.py  _modal_helper.py  _rest_post_mixin.py  _room_group_chat_mixin.py  _sfu_call_mixin.py  _signaling_mixin.py  _tray_mixin.py  _update_lifecycle_mixin.py  _video_renderer.py  add_friend_by_username_dialog.py  add_friend_dialog.py  avatar_palette.py  bot_panel.py  call_dialog.py  calls_dialog.py  chat_header.py  chat_history_policy.py  (+50 more)
app/updater/: __init__.py  applier.py  downloader.py  version_check.py
deploy/: README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml
deploy/mariadb/: my.cnf
deploy/nginx/: CADDY_ALTERNATIVE.md  nginx.conf
deploy/postfix/: DNS_RECORDS.md  Dockerfile  entrypoint.sh  main.cf  master.cf  opendkim.conf  supervisord.conf
deploy/scripts/: certbot_init.sh  certbot_renew.sh  coturn_install.sh
deploy/web/: Dockerfile
docs/: PORTABLE_HARNESS.md
docs/assessments/: codex-2.8-mixin-fragility.md  current-project-review.md  productization.md  vibe-coding.md
docs/db/: erd.md
docs/html/: ARCHITECTURE.html  DESIGN.html  FRONTEND.html  Structure.html  productization.html  test-deployment-setup.html  vibe-coding.html
docs/operations/: docker-rebuild-cycle152.md  i18n-compile.md  mobile-cycle-181-prereq.md  mobile-flutter-setup.md  obs-integration.md  release-workflow.md  remote-control-prereq.md  remote-coord-transform.md  rotation-policy.md  smtp-operations.md  token-usage-30d.html  token-usage-30d.html.bak.html  token-usage-30d.json  token-usage-30d.json.bak.json  toonation-integration.md  wbs.html  windows-wine-smoke.md
docs/policies/: adoption-roadmap.md  bot-framework.md  doc-gardening.md  (+2 more)
mobile/: .gitignore  README.md  pubspec.yaml
scripts/: build.sh
server/: README.md  __init__.py  config.py  main.py  protocol.py  requirements-dev.txt  requirements.txt  room.py  sfu_registry.py  sfu_room.py  signaling.py  signaling_persistence.py
server_webmail/: Dockerfile  __init__.py  imap_service.py  main.py  requirements.txt
tests/: __init__.py  conftest.py
tools/: backup_rotate_check.sh  bench_datachannel.py  bench_rtt.py  bench_transfer.py  bpe_self_check.sh  build.py  cert_renew_check.sh  chaos_signaling.py  check_assessment_consistency.py  check_migration_tables.py  claude-telegram.sh  crontab.txt  doc-lint.sh  dogfooding_harness.py  dovecot_install.sh  gen_token_usage_30d.py  gen_wbs_view.py  generate_call_sounds.py  generate_signature_sounds.py  hook_assessment_freshness.sh  hook_assessment_token_rewrite_trigger.sh  hook_auto_commit_enforce.sh  hook_chat_bpe_check.sh  hook_check_bpe_token_input.sh  hook_dereliction_check.sh  hook_doc_consistency.sh  hook_html_mirror_consistency.sh  hook_post_write_inspect.sh  hook_self_hosted_ci_trigger.sh  hook_telegram_report_stop.sh  i18n_compile.sh  i18n_extract.py  install_wbs_hook.sh  mail_user_add.sh  md_agents.py  measure_cold_start.py  measure_progress.py  meta_enforce.py  reset_test_users.sh  smtp_install.sh  (+6 more)
(+403 files in other folders)
