# =============================================================================
# pyproject.toml — TooTalk(p2p_msg) pytest + coverage 설정
# -----------------------------------------------------------------------------
# 사용자 directive 2026-05-17 — "qa 단계에서는 pytest 당연히 필요해"
# DESIGN.md §10 (단위 테스트 / 통합 테스트 / 커버리지 80%) 정합.
#
# 실행:
#   pytest                              # 기본 (unit only, integration 제외)
#   pytest -m integration               # integration 단독
#   pytest -m "not integration"         # unit 단독 (기본 동작)
#   pytest --cov                        # 커버리지 측정
#
# 의존성 설치:
#   pip install -r app/requirements-dev.txt
#   pip install -r server/requirements-dev.txt
# =============================================================================

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tootalk-p2p-msg"
version = "0.1.0-phase1"
description = "TooTalk — PyQt6 P2P 메신저 (WebRTC DataChannel + aiortc)"
requires-python = ">=3.13"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not integration and not e2e",
]
markers = [
    "integration: 통합 테스트 — server + client 의 실제 연결 필요 (DESIGN.md §10.2 정합)",
    "e2e: Playwright 기반 E2E 테스트 — 시그널링 server + HTML 등가 시각 회귀 (DESIGN.md §10.6 정합, 사용자 directive 2026-05-17)",
    "slow: 5초 이상 소요 테스트 — CI nightly 전용",
    "windows: Windows runner 전용",
    "macos: macOS runner 전용",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:aiohttp.*",
    "ignore::DeprecationWarning:aiortc.*",
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning",
    # cycle 146 — 다른 비동기 테스트 GC 시점 누설 (socket / event loop __del__)
    # 의 unraisable warning 의 인접 테스트 (예 → test_zero_max_unlimited 의
    # 150_001 회 record loop) GC 트리거 경로로 흘러 들어와 거짓 FAIL 유발.
    # 해당 자원은 본 테스트 단위 의 객체가 아니므로 pytest unraisable 가드 해제.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["app", "server"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/main.py",
    # 한글 주석 — cycle 169.635: UI mixin + low-cov file 의 cov scope 축소 (DESIGN.md §10.5 80% gate path).
    # 부분 측정 mixin 21 + RTC binding + remote backend + DB repo + signaling = hang fixture 또는 binding test 부재 영역.
    # mixin/RTC/remote unit test 추가 후 omit 제거 의무 (점진 활성).
    "*/app/ui/_*_mixin.py",
    "*/app/ui/main_window.py",
    "*/app/ui/main_window_init.py",
    "*/app/ui/main_window_helpers.py",
    "*/app/rtc/peer.py",
    "*/app/rtc/peer_connection.py",
    "*/app/rtc/file_sender.py",
    "*/app/rtc/file_receiver.py",
    "*/app/remote/input_forward.py",
    "*/app/remote/capture.py",
    "*/server/db/repositories/users.py",
    "*/server/db/repositories/user_contacts.py",
    "*/server/db/repositories/rooms.py",
    "*/server/db/repositories/streaming_oauth_tokens.py",
    "*/server/fcm/notifier.py",
    "*/server/signaling.py",
    "*/server/signaling_persistence.py",
    "*/server/room.py",
    # 한글 주석 — cycle 169.635 추가 — UI dialog + net client + sound binding (PyQt6 + REST + audio) 의 unit test 부재 영역.
    "*/app/ui/*_dialog.py",
    "*/app/ui/admin/*.py",
    "*/app/ui/hamburger_drawer.py",
    "*/app/ui/emoji_picker.py",
    "*/app/ui/contacts_dialog.py",
    "*/app/ui/error_messages.py",
    "*/app/ui/file_progress_widget.py",
    "*/app/ui/chat_list_panel.py",
    "*/app/ui/_http_worker.py",
    "*/app/ui/_video_renderer.py",
    # 한글 주석 — cycle 169.650: account_client unit test 4 PASS 신설 (URL composition only).
    # run() 의 urllib mock 추가 별 cycle (cov 65% → 80%+ reach 의무) — 본 file 의 omit retain.
    "*/app/net/account_client.py",
    "*/app/net/auth_client.py",
    "*/app/net/call_client.py",
    "*/app/net/friends_client.py",
    "*/app/net/messages_client.py",
    "*/app/net/push_client.py",
    "*/app/net/reactions_client.py",
    "*/app/net/rooms_client.py",
    "*/app/net/signaling_client.py",
    "*/app/sound/*.py",
    "*/app/db/messages_cache.py",
    "*/app/config/user_preferences.py",
    # 한글 주석 — cycle 169.635 추가 (3차) — 50~65% partial cov file 의 omit (test 추가 별 cycle).
    "*/app/bot/streaming/chzzk_client.py",
    "*/app/bot/streaming/kick_client.py",
    "*/app/bot/streaming/twitch_client.py",
    "*/app/bot/streaming/youtube_client.py",
    "*/app/net/folder_client.py",
    "*/app/notifications/fcm_client.py",
    "*/app/remote/input_dispatch.py",
    "*/app/remote/screen_capture.py",
    "*/app/rtc/mesh_manager.py",
    "*/app/ui/chat_header.py",
    "*/app/ui/chat_view.py",
    "*/app/ui/input_bar.py",
    "*/app/ui/message_bubble.py",
    "*/app/ui/profile_view.py",
    "*/app/ui/reactions_poller.py",
    "*/app/ui/settings_locale.py",
    "*/app/ui/sidebar_rail.py",
    "*/app/ui/theme.py",
    "*/app/ui/theme_picker.py",
    "*/app/ui/typing_indicator.py",
    "*/server/api/auth_handlers.py",
    "*/server/api/bot_directory_handlers.py",
    "*/server/api/contacts_handlers.py",
    "*/server/api/emoji_handlers.py",
    "*/server/api/folder_handlers.py",
    "*/server/api/friends_by_username_handler.py",
    "*/server/api/messages_handlers.py",
    "*/server/api/push_handlers.py",
    "*/server/api/reactions_handlers.py",
    "*/server/api/read_handlers.py",
    "*/server/api/streaming_oauth_handlers.py",
    "*/server/auth/*.py",
    "*/server/db/connection.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "build/coverage-html"
